melhoria na segurança

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     <script>
         // Configurações Globais
-const API_URL = ""; 
+const API_URL = "http://localhost:8080"; 
 let token = localStorage.getItem("token");
 let currentUsername = localStorage.getItem("username");
 
