Correções,Front-end,Adição de Inventario

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     </div>
 
     <script>
-        const API_URL = "http://localhost:8080";
+        const API_URL = window.location.origin; 
         let token = localStorage.getItem("token");
 
         document.addEventListener('DOMContentLoaded', () => {
