--- a/index.html
+++ b/index.html
@@ -550,29 +550,40 @@
         }
 
         // --- AUTENTICAÇÃO ---
-        async function login() {
-            const u = document.getElementById("username").value;
-            const p = document.getElementById("password").value;
-            try {
-                const res = await fetch(`${BASE_URL}/login`, {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ username: u, password: p })
-                });
-                const data = await res.json();
-                if (res.ok) {
-                    localStorage.setItem("token", data.token);
-                    token = data.token;
-                    document.getElementById("login-section").classList.remove('active');
-                    document.getElementById("dashboard-wrapper").style.display = 'flex';
-                    loadAll();
-                } else {
-                    document.getElementById("login-error").innerText = data.error;
-                }
-            } catch (e) {
-                document.getElementById("login-error").innerText = "Reino inacessível (Offline)";
-            }
+      async function login() {
+    const u = document.getElementById("username").value;
+    const p = document.getElementById("password").value;
+    const btn = event.target; // Captura o botão clicado
+    const originalText = btn.innerText;
+
+    try {
+        btn.innerText = "DESPERTANDO SERVIDOR..."; 
+        btn.disabled = true;
+
+        const res = await fetch(`${BASE_URL}/login`, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ username: u, password: p })
+        });
+        
+        const data = await res.json();
+
+        if (res.ok) {
+            localStorage.setItem("token", data.token);
+            token = data.token;
+            document.getElementById("login-section").classList.remove('active');
+            document.getElementById("dashboard-wrapper").style.display = 'flex';
+            loadAll();
+        } else {
+            document.getElementById("login-error").innerText = data.error || "Acesso Negado";
         }
+    } catch (e) { 
+        document.getElementById("login-error").innerText = "O Reino está fora do ar (Offline)"; 
+    } finally {
+        btn.innerText = originalText;
+        btn.disabled = false;
+    }
+}
 
         function logout() {
             localStorage.clear();
