--- a/index.html
+++ b/index.html
@@ -531,11 +531,8 @@
 
     <script>
 
-        const BASE_URL = "/";
-
-        const API_URL = `${BASE_URL}/api`;
-        let token = localStorage.getItem("token");
-        let focosTemporarios = [];
+    const BASE_URL = "https://gotask-app.onrender.com/"; // Certifique-se que termina em .onrender.com
+    const API_URL = `${BASE_URL}/api`;
 
         // --- UI HELPERS ---
         function showSection(id) {
