--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 
     <script>
 
-    const BASE_URL = "https://gotask-app.onrender.com/"; // Certifique-se que termina em .onrender.com
+    const BASE_URL = window.location.hostname;
     const API_URL = `${BASE_URL}/api`;
 
         // --- UI HELPERS ---
